[tool.poetry]
name = "krkn-lib"
version = "0.0.0-beta"
description = "Foundation library for Kraken"
authors = ["Red Hat Chaos Team"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/redhat-chaos/krkn"
#packages = [{include= "src/krkn_lib"}]

[tool.poetry.dependencies]
python = "^3.9"
kubernetes ="28.1.0"
sphinxnotes-markdown-builder="^0.5.6"
requests="^2.29.0"
kubeconfig = "^1.1.1"
base64io = "^1.0.3"
sphinx-rtd-theme = "^1.2.2"
tzlocal = "5.1"
pytz = "^2023.3"
PyYAML = "6.0.1"
prometheus-api-client = "^0.5.4"
elasticsearch = "7.13.4"
elasticsearch-dsl = "7.4.1"
wheel = "^0.42.0"
cython = "3.0"
numpy= "1.26.4"
deprecation="2.1.0"
coverage="^7.6.12"

[tool.poetry.group.test.dependencies]
jinja2 = "^3.1.2"
boto3 = "^1.28.12"

[tool.black]
line-length = 79
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
